@@ -743,6 +743,11 @@ void idServerClientSystemLocal::DropClient(client_t *drop,
     // become free in a few seconds
     drop->state = CS_ZOMBIE;
 
+    if (drop->download) {
+        fileSystem->FCloseFile(drop->download);
+        drop->download = 0;
+    }
+
     // call the prog function for removing a client
     // this will remove the body, among other things
 #ifndef UPDATE_SERVER
