@@ -6,6 +6,7 @@
 	* [Server] Only update the userinfo string when really updating the userinfo.
 	* [Filesystem] Fix client crash when server references packs incorrectly
 	* [Filesystem] Fixed resource leak by closing all file handles
+	* [Server] Fixed crash while connecting to the server
 
 2021-04-11 dGr8LookinSparky <hissparkyness@gmail.com>
 	* [Client]Fix the mouse sensitivity for when cl_mouseAccel is disabled.
